feat: add quantity field to product variants - DB, API and Admin panels
